--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.1",
     "@ant-design/pro-components": "^2.7.19",
+    "@ant-design/pro-form": "^2.30.2",
+    "@bytemd/plugin-gfm": "^1.21.0",
+    "@bytemd/plugin-highlight": "^1.21.0",
+    "@bytemd/react": "^1.21.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.1",
     "axios": "^1.7.7",
+    "github-markdown-css": "^5.7.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
