--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -159,6 +159,12 @@
             <artifactId>nacos-config-spring-boot-starter</artifactId>
             <version>0.2.12</version>
         </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>1.38.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
